--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
+  height: 80%;
+  overflow: hidden;
 }
 
 .app .content .content-body .news-section {
@@ -103,10 +104,56 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow-y: scroll;
 }
 
 .app .content .content-body .right-section {
   width: 65%;
   height: 100%;
+}
+
+.news-section {
+  padding: 0 50px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.news-section .news-element {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 50px;
+  -webkit-box-shadow: 0 40px 50px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 40px 50px rgba(0, 0, 0, 0.2);
+}
+
+.news-section .news-element__image {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 100%;
+  height: 300px;
+}
+
+.news-section .news-element__description {
+  font-size: 1.4rem;
+  color: #555555;
+  line-height: 2rem;
+}
+
+.news-section .news-element .news-element-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333333;
+  margin-bottom: 30px;
+  display: block;
+}
+
+.news-section .news-element .content-wrapper {
+  padding: 20px 40px 60px 40px;
 }
 /*# sourceMappingURL=styles.css.map */
