--- a/css/styles.scss
+++ b/css/styles.scss
@@ -86,19 +86,57 @@ $grey: #999999;
     .content-body {
       padding: 30px;
       display: flex;
-      height: 100%;
+      height: 80%;
+      overflow: hidden;
 
       .news-section {
         width: 35%;
         height: 100%;
         display: flex;
         flex-direction: column;
+        overflow-y: scroll;
       }
 
       .right-section {
         width: 65%;
         height: 100%;
       }
+    }
+  }
+}
+
+.news-section {
+  padding: 0 50px;
+  box-sizing: border-box;
+
+  .news-element {
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px;
+    box-shadow: 0 40px 50px rgba(0, 0, 0, 0.2);
+
+    &__image {
+      align-self: center;
+      width: 100%;
+      height: 300px;
+    }
+
+    &__description {
+      font-size: 1.4rem;
+      color: #555555;
+      line-height: 2rem;
+    }
+
+    .news-element-title {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #333333;
+      margin-bottom: 30px;
+      display: block;
+    }
+
+    .content-wrapper {
+      padding: 20px 40px 60px 40px;
     }
   }
 }
