--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .app {
@@ -40,12 +40,12 @@ body {
 }
 
 .app .sidebar .menu li a:hover {
-  color: #6100f4;
+  color: #0072f4;
   font-weight: bold;
 }
 
 .app .sidebar .menu li.active a {
-  color: #6100f4;
+  color: #0072f4;
   font-weight: bold;
 }
 
@@ -69,7 +69,7 @@ body {
 .app .content .header h1 {
   padding: 0;
   margin: 0;
-  color: #6100f4;
+  color: #0072f4;
 }
 
 .app .content .header__tools .search-btn,
@@ -90,12 +90,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 80%;
+  height: 100%;
   overflow: hidden;
 }
 
 .app .content .content-body .news-section {
-  width: 35%;
+  width: 30%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -108,7 +108,7 @@ body {
 }
 
 .app .content .content-body .right-section {
-  width: 65%;
+  width: 70%;
   height: 100%;
 }
 
@@ -135,9 +135,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border-radius: 50px;
-  -webkit-box-shadow: 0 40px 50px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 40px 50px rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+  -webkit-box-shadow: 0 30px 30px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 30px 30px rgba(0, 0, 0, 0.2);
+  margin-bottom: 2rem;
 }
 
 .news-section .news-element__image {
@@ -145,7 +146,7 @@ body {
       -ms-grid-row-align: center;
       align-self: center;
   width: 100%;
-  height: 300px;
+  border-radius: 30px;
 }
 
 .news-section .news-element__description {
@@ -163,13 +164,13 @@ body {
 }
 
 .news-section .news-element .content-wrapper {
-  padding: 20px 40px 60px 40px;
+  padding: 20px 40px 40px 40px;
 }
 
 .weather {
   height: 40%;
   width: 100%;
-  padding: 10px 10px 60px 40px;
+  padding: 30px 30px 60px 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -208,10 +209,11 @@ body {
   -ms-flex-negative: 0;
       flex-shrink: 0;
   margin-right: 30px;
+  padding: 50px 30px;
 }
 
 .weather .weather-day img {
-  width: 100px;
+  width: 128px;
 }
 
 .weather .weather-day .temperature {
@@ -248,5 +250,20 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+.sun {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(255, 145, 0, 0.4)), color-stop(25%, white), to(white));
+  background-image: linear-gradient(0, rgba(255, 145, 0, 0.4) 0%, white 25%, white 100%);
+}
+
+.rain {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(48, 71, 202, 0.4)), color-stop(25%, white), to(white));
+  background-image: linear-gradient(0, rgba(48, 71, 202, 0.4) 0%, white 25%, white 100%);
+}
+
+.wind {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(72, 79, 117, 0.4)), color-stop(25%, white), to(white));
+  background-image: linear-gradient(0, rgba(72, 79, 117, 0.4) 0%, white 25%, white 100%);
 }
 /*# sourceMappingURL=styles.css.map */
