--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,14 +1,13 @@
+@import "./variables";
+
 html,
 body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
-
-$blue: #6100f4;
-$grey: #999999;
 
 .app {
   width: 100%;
@@ -86,11 +85,11 @@ $grey: #999999;
     .content-body {
       padding: 30px;
       display: flex;
-      height: 80%;
+      height: 100%;
       overflow: hidden;
 
       .news-section {
-        width: 35%;
+        width: 30%;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -98,118 +97,12 @@ $grey: #999999;
       }
 
       .right-section {
-        width: 65%;
+        width: 70%;
         height: 100%;
       }
     }
   }
 }
 
-.news-section {
-  padding: 0 50px;
-  box-sizing: border-box;
-
-  &::-webkit-scrollbar {
-    width: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #f0efef;
-    border-radius: 10px;
-  }
-
-  .news-element {
-    display: flex;
-    flex-direction: column;
-    border-radius: 50px;
-    box-shadow: 0 40px 50px rgba(0, 0, 0, 0.2);
-
-    &__image {
-      align-self: center;
-      width: 100%;
-      height: 300px;
-    }
-
-    &__description {
-      font-size: 1.4rem;
-      color: #555555;
-      line-height: 2rem;
-    }
-
-    .news-element-title {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #333333;
-      margin-bottom: 30px;
-      display: block;
-    }
-
-    .content-wrapper {
-      padding: 20px 40px 60px 40px;
-    }
-  }
-}
-
-.weather {
-  height: 40%;
-  width: 100%;
-  padding: 10px 10px 60px 40px;
-  display: flex;
-  overflow-x: scroll;
-  margin-left: 30px;
-
-  &::-webkit-scrollbar {
-    height: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #f0efef;
-    border-radius: 10px;
-  }
-
-  .weather-day {
-    width: 500px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 30px 60px rgba(50, 50, 50, 0.2);
-    border-radius: 30px;
-    flex-shrink: 0;
-    margin-right: 30px;
-
-    img {
-      width: 100px;
-    }
-
-    .temperature {
-      font-size: 4rem;
-      margin-bottom: 10px;
-    }
-
-    .weather-description {
-      font-size: 1.6rem;
-      margin-bottom: 10px;
-    }
-
-    .day-name {
-      color: #777777;
-      font-weight: bold;
-      font-size: 1.6rem;
-      margin-bottom: 10px;
-    }
-  }
-}
-
-.weather-wrapper {
-  .weather-tools {
-    display: flex;
-    flex-direction: column;
-
-    .weather-buttons {
-      display: flex;
-      justify-content: flex-end;
-    }
-  }
-}
+@import "./news";
+@import "./weather";
