--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,7 @@ body {
 
 .app .content {
   width: 90%;
+  overflow: hidden;
 }
 
 .app .content .header {
@@ -72,16 +73,20 @@ body {
   color: #0072f4;
 }
 
-.app .content .header__tools .search-btn,
-.app .content .header__tools .settings-btn {
+.app .content .header__tools button {
   background: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border: none;
   padding: 10px;
   font-size: 1.6rem;
 }
 
-.app .content .header__tools .search-btn:hover,
-.app .content .header__tools .settings-btn:hover {
+.app .content .header__tools button:after {
+  display: none;
+}
+
+.app .content .header__tools button:hover {
   color: #999999;
 }
 
@@ -237,10 +242,24 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.weather-wrapper .weather-tools .header {
+  font-size: 1.4rem;
+  padding: 0 2rem;
+}
+
+.weather-wrapper .weather-tools .header .header-title {
+  font-weight: bold;
+  margin-right: 1rem;
+  color: #0072f4;
+}
+
+.weather-wrapper .weather-tools .header .header-date {
+  color: #999999;
 }
 
 .weather-wrapper .weather-tools .weather-buttons {
@@ -265,5 +284,133 @@ body {
 .wind {
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(72, 79, 117, 0.4)), color-stop(25%, white), to(white));
   background-image: linear-gradient(0, rgba(72, 79, 117, 0.4) 0%, white 25%, white 100%);
+}
+
+.tools {
+  width: 100%;
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.tools .card {
+  background: white;
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
+  height: 400px;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.tools .time {
+  width: 50%;
+  margin-right: 30px;
+}
+
+.tools .time__display {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.tools .time__display .bg {
+  background-image: url("../images/clock.png");
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  opacity: 0.2;
+}
+
+.tools .time__display .time-title {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #666666;
+  position: relative;
+}
+
+.tools .time__display .current-time {
+  font-size: 5rem;
+  margin-bottom: 2rem;
+  z-index: 2;
+}
+
+.tools .time__display .city {
+  font-size: 1.5rem;
+  color: #666666;
+  z-index: 2;
+}
+
+.tools .live {
+  width: 50%;
+  height: 400px;
+}
+
+.tools .live__video {
+  width: 100%;
+  height: 100%;
+}
+
+.switches {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+button {
+  padding: 15px 40px;
+  font-size: 1rem;
+  border: none;
+  -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  margin: 0 5px;
+}
+
+button:hover {
+  background: #0072f4;
+  color: white;
+}
+
+button:hover:after {
+  background: white;
+  -webkit-box-shadow: 0 0 10px white;
+          box-shadow: 0 0 10px white;
+}
+
+button:after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 3px;
+  bottom: 0;
+  left: calc(50% - 5px);
+  background: #0072f4;
+  -webkit-box-shadow: 0 0 10px #0072f4;
+          box-shadow: 0 0 10px #0072f4;
+  position: absolute;
 }
 /*# sourceMappingURL=styles.css.map */
