--- a/css/_news.scss
+++ b/css/_news.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 .news-section {
   padding: 0 50px;
@@ -27,21 +27,64 @@
     }
 
     &__description {
-      font-size: 1.4rem;
+      font-size: 1rem;
       color: #555555;
-      line-height: 2rem;
+      line-height: 1.4rem;
     }
 
     .news-element-title {
-      font-size: 2rem;
+      font-size: 1.4rem;
       font-weight: bold;
       color: #333333;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       display: block;
+      text-decoration: none;
+      transition: all 0.2s ease;
+
+      &:hover {
+        color: $blue;
+      }
+    }
+
+    .author {
+      margin-top: 30px;
+      display: flex;
+      justify-content: space-between;
     }
 
     .content-wrapper {
-      padding: 20px 40px 40px 40px;
+      padding: 20px 30px;
+    }
+  }
+}
+
+@media screen and (max-width: $xl) {
+  .news-section {
+    padding: 0 20px;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 5px;
+    }
+
+    .news-element {
+      border-radius: 20px;
+      box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+
+      &__image {
+        border-radius: 20px;
+      }
+
+      &__description {
+        line-height: 1.2rem;
+      }
+
+      .news-element-title {
+        font-size: 1.2rem;
+      }
     }
   }
 }
