--- a/css/_tools.scss
+++ b/css/_tools.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 .tools {
   width: 100%;
@@ -18,6 +18,8 @@
   .time {
     width: 50%;
     margin-right: 30px;
+    display: flex;
+    flex-direction: column;
 
     &__display {
       display: flex;
@@ -27,8 +29,8 @@
       position: relative;
 
       .bg {
-        background-image: url("../images/clock.png");
-        background-position: 100% 100%;
+        background-image: url('../images/clock.png');
+        background-position: 150% 150%;
         background-repeat: no-repeat;
         width: 100%;
         height: 100%;
@@ -60,7 +62,8 @@
 
   .live {
     width: 50%;
-    height: 400px;
+    display: flex;
+    flex-direction: column;
 
     &__video {
       width: 100%;
