--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,2 +1,10 @@
 $blue: #0072f4;
 $grey: #999999;
+
+// Responsive web design breakpoints
+
+$xs: 576px;
+$sm: 768px;
+$md: 992px;
+$lg: 1200px;
+$xl: 1440px;
