--- a/css/_weather.scss
+++ b/css/_weather.scss
@@ -1,62 +1,67 @@
-@import "./variables";
-
-.weather {
-  height: 40%;
-  width: 100%;
-  padding: 30px 30px 60px 60px;
-  display: flex;
-  overflow-x: scroll;
-  margin-left: 30px;
-
-  &::-webkit-scrollbar {
-    height: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #f0efef;
-    border-radius: 10px;
-  }
-
-  .weather-day {
-    width: 500px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 30px 60px rgba(50, 50, 50, 0.2);
-    border-radius: 30px;
-    flex-shrink: 0;
-    margin-right: 30px;
-    padding: 50px 30px;
-
-    img {
-      width: 128px;
-    }
-
-    .temperature {
-      font-size: 4rem;
-      margin-bottom: 10px;
-    }
-
-    .weather-description {
-      font-size: 1.6rem;
-      margin-bottom: 10px;
-    }
-
-    .day-name {
-      color: #777777;
-      font-weight: bold;
-      font-size: 1.6rem;
-      margin-bottom: 10px;
-    }
-  }
-}
+@import './variables';
 
 .weather-wrapper {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+
+  .weather {
+    width: 100%;
+    padding: 30px 30px 50px 40px;
+    display: flex;
+    overflow-x: scroll;
+    margin-left: 30px;
+
+    &::-webkit-scrollbar {
+      height: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: #f0efef;
+      border-radius: 10px;
+    }
+
+    .weather-day {
+      width: 430px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 20px 40px rgba(50, 50, 50, 0.2);
+      border-radius: 30px;
+      flex-shrink: 0;
+      margin-right: 30px;
+      padding: 50px 30px;
+      box-sizing: border-box;
+
+      img {
+        width: 128px;
+      }
+
+      .temperature {
+        font-size: 3.5rem;
+        margin-bottom: 10px;
+      }
+
+      .weather-description {
+        font-size: 1.4rem;
+        margin-bottom: 10px;
+      }
+
+      .day-name {
+        color: #777777;
+        font-weight: bold;
+        font-size: 1.4rem;
+        margin-bottom: 10px;
+      }
+    }
+  }
+
   .weather-tools {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .header {
       font-size: 1.4rem;
@@ -76,18 +81,88 @@
     .weather-buttons {
       display: flex;
       justify-content: flex-end;
+      margin-right: 1rem;
     }
   }
 }
 
 .sun {
-  background-image: linear-gradient(0, rgba(255, 145, 0, 0.4) 0%, rgb(255, 255, 255) 25%, rgb(255, 255, 255) 100%);
+  background-image: linear-gradient(
+    0,
+    rgba(255, 145, 0, 0.4) 0%,
+    rgb(255, 255, 255) 25%,
+    rgb(255, 255, 255) 100%
+  );
 }
 
 .rain {
-  background-image: linear-gradient(0, rgba(48, 71, 202, 0.4) 0%, rgb(255, 255, 255) 25%, rgb(255, 255, 255) 100%);
+  background-image: linear-gradient(
+    0,
+    rgba(48, 71, 202, 0.4) 0%,
+    rgb(255, 255, 255) 25%,
+    rgb(255, 255, 255) 100%
+  );
 }
 
 .wind {
-  background-image: linear-gradient(0, rgba(72, 79, 117, 0.4) 0%, rgb(255, 255, 255) 25%, rgb(255, 255, 255) 100%);
+  background-image: linear-gradient(
+    0,
+    rgba(72, 79, 117, 0.4) 0%,
+    rgb(255, 255, 255) 25%,
+    rgb(255, 255, 255) 100%
+  );
+}
+
+@media screen and (max-width: $xl) {
+  .weather-wrapper {
+    .weather {
+      padding: 30px 30px 40px 30px;
+      margin-left: 20px;
+
+      &::-webkit-scrollbar {
+        height: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+      }
+
+      .weather-day {
+        width: 350px;
+        height: 100%;
+        box-shadow: 0 10px 30px rgba(50, 50, 50, 0.15);
+        border-radius: 20px;
+        margin-right: 20px;
+        padding: 40px 20px;
+
+        img {
+          width: 100px;
+          margin-bottom: 5px;
+        }
+
+        .temperature {
+          font-size: 3rem;
+          margin-bottom: 5px;
+        }
+
+        .weather-description {
+          font-size: 1.2rem;
+          margin-bottom: 5px;
+        }
+
+        .day-name {
+          color: #777777;
+          font-weight: bold;
+          font-size: 1.4rem;
+          margin-bottom: 5px;
+        }
+      }
+    }
+    .weather-tools {
+      .header {
+        font-size: 1.2rem;
+        padding: 0 2rem;
+      }
+    }
+  }
 }
