--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .app {
@@ -15,56 +15,35 @@ body {
   display: flex;
 }
 
-.app .sidebar {
-  width: 10%;
-  padding: 20px 30px;
-}
-
-.app .sidebar .logo img {
-  width: 100%;
-}
-
-.app .sidebar .menu {
-  list-style: none;
-  padding: 0;
-  margin-top: 100px;
-}
-
-.app .sidebar .menu li {
-  padding: 10px;
-}
-
-.app .sidebar .menu li a {
-  text-decoration: none;
-  color: #999999;
-}
-
-.app .sidebar .menu li a:hover {
-  color: #0072f4;
-  font-weight: bold;
-}
-
-.app .sidebar .menu li.active a {
-  color: #0072f4;
-  font-weight: bold;
-}
-
 .app .content {
   width: 90%;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .app .content .header {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 30px 20px;
+  padding: 20px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 80px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .app .content .header h1 {
@@ -91,7 +70,9 @@ body {
 }
 
 .app .content .content-body {
-  padding: 30px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -115,6 +96,40 @@ body {
 .app .content .content-body .right-section {
   width: 70%;
   height: 100%;
+}
+
+.sidebar {
+  width: 10%;
+  padding: 20px 30px;
+}
+
+.sidebar .logo img {
+  width: 100%;
+}
+
+.sidebar .menu {
+  list-style: none;
+  padding: 0;
+  margin-top: 100px;
+}
+
+.sidebar .menu li {
+  padding: 10px;
+}
+
+.sidebar .menu li a {
+  text-decoration: none;
+  color: #999999;
+}
+
+.sidebar .menu li a:hover {
+  color: #0072f4;
+  font-weight: bold;
+}
+
+.sidebar .menu li.active a {
+  color: #0072f4;
+  font-weight: bold;
 }
 
 .news-section {
@@ -155,27 +170,80 @@ body {
 }
 
 .news-section .news-element__description {
-  font-size: 1.4rem;
+  font-size: 1rem;
   color: #555555;
-  line-height: 2rem;
+  line-height: 1.4rem;
 }
 
 .news-section .news-element .news-element-title {
-  font-size: 2rem;
+  font-size: 1.4rem;
   font-weight: bold;
   color: #333333;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   display: block;
+  text-decoration: none;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.news-section .news-element .news-element-title:hover {
+  color: #0072f4;
+}
+
+.news-section .news-element .author {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .news-section .news-element .content-wrapper {
-  padding: 20px 40px 40px 40px;
+  padding: 20px 30px;
 }
 
-.weather {
-  height: 40%;
+@media screen and (max-width: 1440px) {
+  .news-section {
+    padding: 0 20px;
+  }
+  .news-section::-webkit-scrollbar {
+    width: 5px;
+  }
+  .news-section::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+  }
+  .news-section .news-element {
+    border-radius: 20px;
+    -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  }
+  .news-section .news-element__image {
+    border-radius: 20px;
+  }
+  .news-section .news-element__description {
+    line-height: 1.2rem;
+  }
+  .news-section .news-element .news-element-title {
+    font-size: 1.2rem;
+  }
+}
+
+.weather-wrapper {
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.weather-wrapper .weather {
   width: 100%;
-  padding: 30px 30px 60px 60px;
+  padding: 30px 30px 50px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,17 +251,17 @@ body {
   margin-left: 30px;
 }
 
-.weather::-webkit-scrollbar {
+.weather-wrapper .weather::-webkit-scrollbar {
   height: 10px;
 }
 
-.weather::-webkit-scrollbar-thumb {
+.weather-wrapper .weather::-webkit-scrollbar-thumb {
   background: #f0efef;
   border-radius: 10px;
 }
 
-.weather .weather-day {
-  width: 500px;
+.weather-wrapper .weather .weather-day {
+  width: 430px;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -208,33 +276,35 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 0 30px 60px rgba(50, 50, 50, 0.2);
-          box-shadow: 0 30px 60px rgba(50, 50, 50, 0.2);
+  -webkit-box-shadow: 0 20px 40px rgba(50, 50, 50, 0.2);
+          box-shadow: 0 20px 40px rgba(50, 50, 50, 0.2);
   border-radius: 30px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
   margin-right: 30px;
   padding: 50px 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.weather .weather-day img {
+.weather-wrapper .weather .weather-day img {
   width: 128px;
 }
 
-.weather .weather-day .temperature {
-  font-size: 4rem;
+.weather-wrapper .weather .weather-day .temperature {
+  font-size: 3.5rem;
   margin-bottom: 10px;
 }
 
-.weather .weather-day .weather-description {
-  font-size: 1.6rem;
+.weather-wrapper .weather .weather-day .weather-description {
+  font-size: 1.4rem;
   margin-bottom: 10px;
 }
 
-.weather .weather-day .day-name {
+.weather-wrapper .weather .weather-day .day-name {
   color: #777777;
   font-weight: bold;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   margin-bottom: 10px;
 }
 
@@ -245,6 +315,9 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .weather-wrapper .weather-tools .header {
@@ -269,6 +342,7 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  margin-right: 1rem;
 }
 
 .sun {
@@ -284,6 +358,50 @@ body {
 .wind {
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(72, 79, 117, 0.4)), color-stop(25%, white), to(white));
   background-image: linear-gradient(0, rgba(72, 79, 117, 0.4) 0%, white 25%, white 100%);
+}
+
+@media screen and (max-width: 1440px) {
+  .weather-wrapper .weather {
+    padding: 30px 30px 40px 30px;
+    margin-left: 20px;
+  }
+  .weather-wrapper .weather::-webkit-scrollbar {
+    height: 5px;
+  }
+  .weather-wrapper .weather::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+  }
+  .weather-wrapper .weather .weather-day {
+    width: 350px;
+    height: 100%;
+    -webkit-box-shadow: 0 10px 30px rgba(50, 50, 50, 0.15);
+            box-shadow: 0 10px 30px rgba(50, 50, 50, 0.15);
+    border-radius: 20px;
+    margin-right: 20px;
+    padding: 40px 20px;
+  }
+  .weather-wrapper .weather .weather-day img {
+    width: 100px;
+    margin-bottom: 5px;
+  }
+  .weather-wrapper .weather .weather-day .temperature {
+    font-size: 3rem;
+    margin-bottom: 5px;
+  }
+  .weather-wrapper .weather .weather-day .weather-description {
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+  }
+  .weather-wrapper .weather .weather-day .day-name {
+    color: #777777;
+    font-weight: bold;
+    font-size: 1.4rem;
+    margin-bottom: 5px;
+  }
+  .weather-wrapper .weather-tools .header {
+    font-size: 1.2rem;
+    padding: 0 2rem;
+  }
 }
 
 .tools {
@@ -309,6 +427,13 @@ body {
 .tools .time {
   width: 50%;
   margin-right: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .tools .time__display {
@@ -330,7 +455,7 @@ body {
 
 .tools .time__display .bg {
   background-image: url("../images/clock.png");
-  background-position: 100% 100%;
+  background-position: 150% 150%;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
@@ -360,7 +485,13 @@ body {
 
 .tools .live {
   width: 50%;
-  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .tools .live__video {
@@ -376,7 +507,10 @@ body {
 }
 
 button {
-  padding: 15px 40px;
+  width: 120px;
+  padding: 15px 0;
+  text-align: center;
+  background-color: white;
   font-size: 1rem;
   border: none;
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
@@ -388,10 +522,16 @@ button {
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
   margin: 0 5px;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.07)), to(white));
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.07) 0%, white 100%);
+  font-weight: bold;
+  color: #444;
 }
 
 button:hover {
   background: #0072f4;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 114, 244, 0)));
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 114, 244, 0) 100%);
   color: white;
 }
 
@@ -402,7 +542,7 @@ button:hover:after {
 }
 
 button:after {
-  content: "";
+  content: '';
   display: block;
   width: 20px;
   height: 3px;
@@ -416,5 +556,29 @@ button:after {
 
 .preloader {
   width: 128px;
+}
+
+@media screen and (max-width: 1440px) {
+  button {
+    width: 120px;
+    padding: 15px 0;
+    text-align: center;
+    font-size: 1rem;
+    -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    margin: 0 5px;
+  }
+  button:hover:after {
+    -webkit-box-shadow: 0 0 10px white;
+            box-shadow: 0 0 10px white;
+  }
+  button:after {
+    width: 20px;
+    height: 3px;
+    left: calc(50% - 5px);
+    -webkit-box-shadow: 0 0 10px #0072f4;
+            box-shadow: 0 0 10px #0072f4;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
