--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 html,
 body {
@@ -6,7 +6,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .app {
@@ -14,53 +14,20 @@ body {
   height: 100%;
   display: flex;
 
-  .sidebar {
-    width: 10%;
-    padding: 20px 30px;
-
-    .logo {
-      img {
-        width: 100%;
-      }
-    }
-
-    .menu {
-      list-style: none;
-      padding: 0;
-      margin-top: 100px;
-
-      li {
-        padding: 10px;
-
-        a {
-          text-decoration: none;
-          color: $grey;
-
-          &:hover {
-            color: $blue;
-            font-weight: bold;
-          }
-        }
-
-        &.active {
-          a {
-            color: $blue;
-            font-weight: bold;
-          }
-        }
-      }
-    }
-  }
-
   .content {
     width: 90%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 
     .header {
+      flex-grow: 0;
       display: flex;
       justify-content: space-between;
-      padding: 30px 20px;
+      padding: 20px;
       align-items: center;
+      height: 80px;
+      box-sizing: border-box;
 
       h1 {
         padding: 0;
@@ -87,7 +54,7 @@ body {
     }
 
     .content-body {
-      padding: 30px;
+      flex-grow: 1;
       display: flex;
       height: 100%;
       overflow: hidden;
@@ -108,12 +75,16 @@ body {
   }
 }
 
-@import "./news";
-@import "./weather";
-@import "./tools";
+@import './sidebar';
+@import './news';
+@import './weather';
+@import './tools';
 
 button {
-  padding: 15px 40px;
+  width: 120px;
+  padding: 15px 0;
+  text-align: center;
+  background-color: white;
   font-size: 1rem;
   border: none;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
@@ -123,9 +94,21 @@ button {
   outline: none;
   transition: all 0.2s ease;
   margin: 0 5px;
+  background-image: linear-gradient(
+    0deg,
+    rgba(black, 0.07) 0%,
+    rgba(white, 1) 100%
+  );
+  font-weight: bold;
+  color: #444;
 
   &:hover {
     background: $blue;
+    background-image: linear-gradient(
+      0deg,
+      rgba(black, 0.1) 0%,
+      rgba($blue, 0) 100%
+    );
     color: white;
 
     &:after {
@@ -135,7 +118,7 @@ button {
   }
 
   &:after {
-    content: "";
+    content: '';
     display: block;
     width: 20px;
     height: 3px;
@@ -149,4 +132,29 @@ button {
 
 .preloader {
   width: 128px;
+}
+
+@media screen and (max-width: $xl) {
+  button {
+    width: 120px;
+    padding: 15px 0;
+    text-align: center;
+    font-size: 1rem;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    margin: 0 5px;
+
+    &:hover {
+      &:after {
+        box-shadow: 0 0 10px rgba(white, 1);
+      }
+    }
+
+    &:after {
+      width: 20px;
+      height: 3px;
+      left: calc(50% - 5px);
+      box-shadow: 0 0 10px rgba($blue, 1);
+    }
+  }
 }
