--- a/css/_tools.scss
+++ b/css/_tools.scss
@@ -9,7 +9,7 @@
 
   .card {
     background: white;
-    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
     height: 400px;
     border-radius: 30px;
     overflow: hidden;
@@ -75,4 +75,48 @@
 .switches {
   margin-bottom: 20px;
   display: flex;
+}
+
+@media screen and (max-width: $xl) {
+  .tools {
+    .card {
+      border-radius: 20px;
+    }
+
+    .time {
+      margin-right: 20px;
+
+      &__display {
+        .time-title {
+          font-size: 1.2rem;
+          margin-bottom: 1.6rem;
+        }
+
+        .current-time {
+          font-size: 4rem;
+          margin-bottom: 1.6rem;
+        }
+
+        .city {
+          font-size: 1.3rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $lg) {
+  .tools {
+    .card {
+      border-radius: 10px;
+      height: 250px;
+    }
+    .time {
+      &__display {
+        .bg {
+          opacity: 0.1;
+        }
+      }
+    }
+  }
 }
