--- a/css/_news.scss
+++ b/css/_news.scss
@@ -88,3 +88,29 @@
     }
   }
 }
+
+@media screen and (max-width: $lg) {
+  .news-section {
+    padding: 0 10px;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 5px;
+    }
+
+    .news-element {
+      border-radius: 10px;
+
+      &__image {
+        border-radius: 10px;
+      }
+
+      .content-wrapper {
+        padding: 15px 20px;
+      }
+    }
+  }
+}
