--- a/css/_weather.scss
+++ b/css/_weather.scss
@@ -63,7 +63,7 @@
     justify-content: space-between;
     align-items: center;
 
-    .header {
+    &__header {
       font-size: 1.4rem;
       padding: 0 2rem;
 
@@ -162,6 +162,34 @@
       .header {
         font-size: 1.2rem;
         padding: 0 2rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $lg) {
+  .weather-wrapper {
+    .weather {
+      padding: 20px 20px 30px 20px;
+      margin-left: 10px;
+
+      .weather-day {
+        width: 300px;
+        border-radius: 10px;
+        margin-right: 10px;
+        padding: 20px;
+
+        .temperature {
+          font-size: 2.4rem;
+        }
+
+        .weather-description {
+          font-size: 1rem;
+        }
+
+        .day-name {
+          font-size: 1.2rem;
+        }
       }
     }
   }
