--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,27 @@ body {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .news-section {
+    padding: 0 10px;
+  }
+  .news-section::-webkit-scrollbar {
+    width: 5px;
+  }
+  .news-section::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+  }
+  .news-section .news-element {
+    border-radius: 10px;
+  }
+  .news-section .news-element__image {
+    border-radius: 10px;
+  }
+  .news-section .news-element .content-wrapper {
+    padding: 15px 20px;
+  }
+}
+
 .weather-wrapper {
   height: 50%;
   display: -webkit-box;
@@ -320,18 +341,18 @@ body {
           align-items: center;
 }
 
-.weather-wrapper .weather-tools .header {
+.weather-wrapper .weather-tools__header {
   font-size: 1.4rem;
   padding: 0 2rem;
 }
 
-.weather-wrapper .weather-tools .header .header-title {
+.weather-wrapper .weather-tools__header .header-title {
   font-weight: bold;
   margin-right: 1rem;
   color: #0072f4;
 }
 
-.weather-wrapper .weather-tools .header .header-date {
+.weather-wrapper .weather-tools__header .header-date {
   color: #999999;
 }
 
@@ -404,6 +425,28 @@ body {
   }
 }
 
+@media screen and (max-width: 1200px) {
+  .weather-wrapper .weather {
+    padding: 20px 20px 30px 20px;
+    margin-left: 10px;
+  }
+  .weather-wrapper .weather .weather-day {
+    width: 300px;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding: 20px;
+  }
+  .weather-wrapper .weather .weather-day .temperature {
+    font-size: 2.4rem;
+  }
+  .weather-wrapper .weather .weather-day .weather-description {
+    font-size: 1rem;
+  }
+  .weather-wrapper .weather .weather-day .day-name {
+    font-size: 1.2rem;
+  }
+}
+
 .tools {
   width: 100%;
   height: 50%;
@@ -417,8 +460,8 @@ body {
 
 .tools .card {
   background: white;
-  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 20px 30px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 20px 30px rgba(0, 0, 0, 0.15);
   height: 400px;
   border-radius: 30px;
   overflow: hidden;
@@ -506,6 +549,36 @@ body {
   display: flex;
 }
 
+@media screen and (max-width: 1440px) {
+  .tools .card {
+    border-radius: 20px;
+  }
+  .tools .time {
+    margin-right: 20px;
+  }
+  .tools .time__display .time-title {
+    font-size: 1.2rem;
+    margin-bottom: 1.6rem;
+  }
+  .tools .time__display .current-time {
+    font-size: 4rem;
+    margin-bottom: 1.6rem;
+  }
+  .tools .time__display .city {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .tools .card {
+    border-radius: 10px;
+    height: 250px;
+  }
+  .tools .time__display .bg {
+    opacity: 0.1;
+  }
+}
+
 button {
   width: 120px;
   padding: 15px 0;
@@ -560,9 +633,6 @@ button:after {
 
 @media screen and (max-width: 1440px) {
   button {
-    width: 120px;
-    padding: 15px 0;
-    text-align: center;
     font-size: 1rem;
     -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
             box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
@@ -579,6 +649,18 @@ button:after {
     left: calc(50% - 5px);
     -webkit-box-shadow: 0 0 10px #0072f4;
             box-shadow: 0 0 10px #0072f4;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .app .content .header h1 {
+    font-size: 1.4rem;
+  }
+  button {
+    width: 80px;
+    font-size: 0.8rem;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
 }
 /*# sourceMappingURL=styles.css.map */
