--- a/css/styles.scss
+++ b/css/styles.scss
@@ -136,9 +136,6 @@ button {
 
 @media screen and (max-width: $xl) {
   button {
-    width: 120px;
-    padding: 15px 0;
-    text-align: center;
     font-size: 1rem;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -156,5 +153,22 @@ button {
       left: calc(50% - 5px);
       box-shadow: 0 0 10px rgba($blue, 1);
     }
+  }
+}
+
+@media screen and (max-width: $lg) {
+  .app {
+    .content {
+      .header {
+        h1 {
+          font-size: 1.4rem;
+        }
+      }
+    }
+  }
+  button {
+    width: 80px;
+    font-size: 0.8rem;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   }
 }
