--- a/css/_weather.scss
+++ b/css/_weather.scss
@@ -86,7 +86,7 @@
   }
 }
 
-.sun {
+.clear {
   background-image: linear-gradient(
     0,
     rgba(255, 145, 0, 0.4) 0%,
@@ -104,7 +104,7 @@
   );
 }
 
-.wind {
+.clouds {
   background-image: linear-gradient(
     0,
     rgba(72, 79, 117, 0.4) 0%,
