--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ body {
   margin-right: 1rem;
 }
 
-.sun {
+.clear {
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(255, 145, 0, 0.4)), color-stop(25%, white), to(white));
   background-image: linear-gradient(0, rgba(255, 145, 0, 0.4) 0%, white 25%, white 100%);
 }
@@ -376,7 +376,7 @@ body {
   background-image: linear-gradient(0, rgba(48, 71, 202, 0.4) 0%, white 25%, white 100%);
 }
 
-.wind {
+.clouds {
   background-image: -webkit-gradient(linear, left top, left bottom, from(0), color-stop(0%, rgba(72, 79, 117, 0.4)), color-stop(25%, white), to(white));
   background-image: linear-gradient(0, rgba(72, 79, 117, 0.4) 0%, white 25%, white 100%);
 }
