--- a/css/styles.css
+++ b/css/styles.css
@@ -601,14 +601,14 @@ button {
   color: #444;
 }
 
-button:hover {
+button:hover, button.btn-active {
   background: #0072f4;
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.1)), to(rgba(0, 114, 244, 0)));
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 114, 244, 0) 100%);
   color: white;
 }
 
-button:hover:after {
+button:hover:after, button.btn-active:after {
   background: white;
   -webkit-box-shadow: 0 0 10px white;
           box-shadow: 0 0 10px white;
